[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = "A tool to fetch research papers from PubMed based on user queries."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pandas = "^2.0.0"
typer = "^0.9.0"

[tool.poetry.scripts]
get-papers-list = "get_papers_list:app"
